--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket Game</title>
-    <style>
-        body{
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bat Ball Stump Game</h1>
@@ -17,7 +13,7 @@
     let resultMsg = getResult('Bat', computerChoice);
     showResult('Bat', computerChoice, resultMsg);
     ">
-    Bat
+    <img src="Images/bat.png" alt="Bat Image" class="choice-image">
     </button>
 
 
@@ -26,7 +22,7 @@
     resultMsg = getResult('Ball', computerChoice);
     showResult('Ball', computerChoice, resultMsg);
     ">
-    Ball
+    <img src="Images/ball.png" alt="Ball Image" class="choice-image">
     </button>
 
 
@@ -35,7 +31,7 @@
     resultMsg = getResult('Stump', computerChoice);
     showResult('Stump', computerChoice, resultMsg);
     ">
-    Stump
+    <img src="Images/stump.png" alt="Stump Image" class="choice-image">
     </button>
 
     <button onclick="
